--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,14 +7,13 @@ main: ${mainClass}
 
 commands:
   stationaryentity:
+    aliases: [ste]
     description: "${description}"
     usage: |
-      §6[StationaryEntity]§f All commands start with §7/ste §f|§7 /stationaryentity
-      spawn <entity type> [name] §7- Spawn an entity which has the same position and rotation as you. Example: /ste spawn villager &6Lorem &cIpsum
-      §7"entity type" - The type of the entity, for example "villager" (same as in the vanilla spawn command). "name" - The optional name of the entity. This field supports spaces and color codes.
-      §7You can also specify NBT tags, except "rotation" and "NoAI" (you also override the default NBT tags ("Silent" and "Invulnerable") by doing this): /ste spawn villager;Silent:1,Profession:2 &6Lorem &cIpsum
-      delete §7- Delete an entity safely (deletes the entity and the invisible armor stand). Usage: Type "/ste delete" then right click on an entity.
-      clear [radius] §7- Clear the surroundings of floating, always visible names. "radius" - The radius in which to remove named armor stands. Default value: 1
-      rename <name> §7- Rename an entity. Usage: Type "/ste rename <name>" then right click on an entity.
-      stop §7- Exit the selecting mode.
-    aliases: [ste]
+      §6[StationaryEntity]§f Command list:
+      §cUsage: §f/ste spawn <entity type> [NBT] §7- Spawn an entity which has the same position and rotation as you. The entity type is the same as in the vanilla summon command.
+      §7You can also specify NBT tags: "/ste spawn villager Silent:1,Profession:2". The NoAI, Rotation and PersistenceRequired tags are always applied, but you override the Invulnerable and Silent tags by entering some yourself.
+      §cUsage: §f/ste name <name> §7- Add an always visible name to the next right clicked entity.
+      §cUsage: §f/ste delete §7- Delete the next right clicked entity safely.
+      §cUsage: §f/ste clear [radius] §7- Clear the surroundings of floating, always visible names. The default radius is 1 block.
+      §cUsage: §f/ste stop §7- Exit the selecting mode you joined to by entering the name/delete command.
